-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b53
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8026088 | 8 | Thomas Schatzl | P2 | Closed | Fixed | b111 |
| JDK-8028189 | 7u60 | Thomas Schatzl | P2 | Closed | Fixed | b05 |
VM crashes due to failed assertion "assert(thread < _num_vtimes) failed: just checking" when G1ConcRefinementThreads > ParallelGCThreads:
jdk1.8.0/fastdebug/bin/java -XX:+UseG1GC -XX:G1ConcRefinementThreads=2 -XX:ParallelGCThreads=1 -version
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/g1RemSetSummary.cpp:70
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/HUDSON/workspace/8-2-build-linux-amd64/jdk8/254/hotspot/src/share/vm/gc_implementation/g1/g1RemSetSummary.cpp:70), pid=12479, tid=139827559917312
# assert(thread < _num_vtimes) failed: just checking
#
# JRE version: (8.0-b108) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b50-fastdebug mixed mode linux-amd64 compressed oops)
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /tmp/8/hs_err_pid12479.log
jdk1.8.0/fastdebug/bin/java -XX:+UseG1GC -XX:G1ConcRefinementThreads=2 -XX:ParallelGCThreads=1 -version
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/g1RemSetSummary.cpp:70
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/HUDSON/workspace/8-2-build-linux-amd64/jdk8/254/hotspot/src/share/vm/gc_implementation/g1/g1RemSetSummary.cpp:70), pid=12479, tid=139827559917312
# assert(thread < _num_vtimes) failed: just checking
#
# JRE version: (8.0-b108) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b50-fastdebug mixed mode linux-amd64 compressed oops)
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /tmp/8/hs_err_pid12479.log
- backported by
-
JDK-8026088 G1: assert "assert(thread < _num_vtimes) failed: just checking" fails when G1ConcRefinementThreads > ParallelGCThreads
-
- Closed
-
-
JDK-8028189 G1: assert "assert(thread < _num_vtimes) failed: just checking" fails when G1ConcRefinementThreads > ParallelGCThreads
-
- Closed
-
- duplicates
-
JDK-8026046 [TESTBUG] add regression tests for ParallelGCThreads and ConcGCThreads flags
-
- Closed
-
- relates to
-
JDK-8026046 [TESTBUG] add regression tests for ParallelGCThreads and ConcGCThreads flags
-
- Closed
-